--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.project">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
+
         android:theme="@style/Theme.Project">
+
+        <activity
+            android:name=".PdfView"
+            android:exported="false" />
+        <activity
+            android:name=".Payment"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -19,11 +32,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Register"></activity>
-        <activity android:name=".Home"></activity>
-        <activity android:name=".Detail"></activity>
-        <activity android:name=".Add_Course"></activity>
+        <activity android:name=".Register" />
+        <activity android:name=".Home" />
+        <activity android:name=".Detail" />
+        <activity android:name=".Add_Course" />
+
+        <provider
+            android:authorities="${applicationId}.provider"
+            android:name="androidx.core.content.FileProvider"
+            android:grantUriPermissions="true"
+            android:forceUriPermissions="true">
+
+<meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+    android:resource="@xml/provider_path"/>
+        </provider>
+
+
 
     </application>
+
 
 </manifest>
